--- a/.github/workflows/deploy-app-to-aws.yaml
+++ b/.github/workflows/deploy-app-to-aws.yaml
@@ -140,6 +140,57 @@ jobs:
           # Note: Passwords are automatically created by the Lambda function and stored in Secrets Manager
           # All scripts and tests retrieve passwords from Secrets Manager: ${STACK_NAME}/UserPasswords
 
+      - name: Verify Passwords in Secrets Manager
+        run: |
+          SECRET_NAME="${STACK_NAME}/UserPasswords"
+          TEST_USERNAME="${{ steps.users.outputs.test_username }}"
+          ADMIN_USERNAME="${{ steps.users.outputs.admin_username }}"
+          
+          echo "Verifying passwords are stored in Secrets Manager..."
+          
+          # Wait a moment for eventual consistency
+          sleep 2
+          
+          # Retry logic for secret retrieval
+          MAX_RETRIES=5
+          RETRY_COUNT=0
+          SECRET_RETRIEVED=false
+          
+          while [ $RETRY_COUNT -lt $MAX_RETRIES ]; do
+            if aws secretsmanager describe-secret --secret-id "$SECRET_NAME" --region "$REGION" >/dev/null 2>&1; then
+              SECRET_VALUE=$(aws secretsmanager get-secret-value \
+                --secret-id "$SECRET_NAME" \
+                --region "$REGION" \
+                --query "SecretString" \
+                --output text 2>/dev/null || echo "")
+              
+              if [ -n "$SECRET_VALUE" ] && [ "$SECRET_VALUE" != "null" ] && [ "$SECRET_VALUE" != "None" ]; then
+                # Verify we can extract passwords
+                TEST_PWD=$(echo "$SECRET_VALUE" | jq -r ".[\"$TEST_USERNAME\"]" 2>/dev/null || echo "")
+                ADMIN_PWD=$(echo "$SECRET_VALUE" | jq -r ".[\"$ADMIN_USERNAME\"]" 2>/dev/null || echo "")
+                
+                if [ -n "$TEST_PWD" ] && [ "$TEST_PWD" != "null" ] && [ -n "$ADMIN_PWD" ] && [ "$ADMIN_PWD" != "null" ]; then
+                  echo "✅ Passwords verified in Secrets Manager"
+                  echo "  Test user password length: ${#TEST_PWD} characters"
+                  echo "  Admin user password length: ${#ADMIN_PWD} characters"
+                  SECRET_RETRIEVED=true
+                  break
+                fi
+              fi
+            fi
+            
+            RETRY_COUNT=$((RETRY_COUNT + 1))
+            if [ $RETRY_COUNT -lt $MAX_RETRIES ]; then
+              echo "  Retry $RETRY_COUNT/$MAX_RETRIES: Waiting for secret to be available..."
+              sleep 2
+            fi
+          done
+          
+          if [ "$SECRET_RETRIEVED" = "false" ]; then
+            echo "⚠️  Warning: Could not verify passwords in Secrets Manager after $MAX_RETRIES attempts"
+            echo "This may cause test failures, but deployment will continue"
+          fi
+
       - name: Update Website Contents
         run: bash ./github/scripts/update-website-contents.sh ${STACK_NAME} ${REGION}
 
@@ -186,12 +237,43 @@ jobs:
           # This script will also fetch passwords from Secrets Manager (where pipeline stores them)
           ./scripts/fetch-stack-outputs.sh "$STACK_NAME" "$REGION" "default"
           
-          # Verify passwords were retrieved from Secrets Manager
-          if ! grep -q "^TEST_USER_PASSWORD=" .env 2>/dev/null || ! grep -q "^ADMIN_USER_PASSWORD=" .env 2>/dev/null; then
-            echo "⚠️  Warning: Passwords may not have been retrieved from Secrets Manager"
+          # Verify passwords were retrieved and are not empty
+          TEST_PWD_LINE=$(grep "^TEST_USER_PASSWORD=" .env 2>/dev/null || echo "")
+          ADMIN_PWD_LINE=$(grep "^ADMIN_USER_PASSWORD=" .env 2>/dev/null || echo "")
+          
+          if [ -z "$TEST_PWD_LINE" ] || [ -z "$ADMIN_PWD_LINE" ]; then
+            echo "❌ ERROR: Passwords were not retrieved from Secrets Manager"
             echo "The pipeline should have created passwords and stored them in: ${STACK_NAME}/UserPasswords"
-          else
-            echo "✅ Passwords retrieved from Secrets Manager"
+            echo ""
+            echo "Current .env file contents (passwords redacted):"
+            grep -E "^(TEST_USER|ADMIN_USER)" .env | sed 's/=.*/=***REDACTED***/' || echo "  No password lines found"
+            exit 1
+          fi
+          
+          # Extract password values (everything after =)
+          TEST_PWD_VALUE=$(echo "$TEST_PWD_LINE" | cut -d'=' -f2-)
+          ADMIN_PWD_VALUE=$(echo "$ADMIN_PWD_LINE" | cut -d'=' -f2-)
+          
+          if [ -z "$TEST_PWD_VALUE" ] || [ "$TEST_PWD_VALUE" = "" ]; then
+            echo "❌ ERROR: TEST_USER_PASSWORD is empty in .env file"
+            exit 1
+          fi
+          
+          if [ -z "$ADMIN_PWD_VALUE" ] || [ "$ADMIN_PWD_VALUE" = "" ]; then
+            echo "❌ ERROR: ADMIN_USER_PASSWORD is empty in .env file"
+            exit 1
+          fi
+          
+          echo "✅ Passwords retrieved from Secrets Manager"
+          echo "  Test user password length: ${#TEST_PWD_VALUE} characters"
+          echo "  Admin user password length: ${#ADMIN_PWD_VALUE} characters"
+          
+          # Verify passwords don't contain newlines or other problematic characters
+          if echo "$TEST_PWD_VALUE" | grep -q $'\n'; then
+            echo "⚠️  Warning: TEST_USER_PASSWORD contains newlines, which may cause issues"
+          fi
+          if echo "$ADMIN_PWD_VALUE" | grep -q $'\n'; then
+            echo "⚠️  Warning: ADMIN_USER_PASSWORD contains newlines, which may cause issues"
           fi
 
       - name: Run UI Tests
